language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/factor_invalid_2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/factor_invalid_2.move:8:9 ───
   │
 8 │         &mut root.g;
   │         ^^^^^^^^^^^ Invalid mutable borrow at field 'g'.
   ·
 6 │         let eps = if (cond) bar(root) else &x1;
   │                             --------- It is still being borrowed by this reference
   │

